<?xml version="1.0"?>
<package format="2">
  <name>pcyy_arm_teleop</name>
  <version>0.1.0</version>
  <description>Keyboard teleoperation for W2A arm joint trajectory controller.</description>

  <maintainer email="bcsh@todo.todo">bcsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>python3</exec_depend>

  <export/>
</package>
